sizing issue v5 overflow issue solved

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,10 @@ body {
     font-weight: 400;
     background-color: gray;
     text-align: center;
-    overflow: hidden; /* Prevent scrolling */
+    height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+
 }
 
 #title-screen {
@@ -33,7 +36,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    border-width: 10px;
+    border-width: 5px;
     border-style: double;
     border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
     border-image-slice: 1;
